--- a/style.css
+++ b/style.css
@@ -17,10 +17,15 @@ body {
 .bg {
     background: url('https://images.unsplash.com/photo-1528834342297-fdefb9a5a92b?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxfDB8MXxyYW5kb218MHx8fHx8fHx8MTY0OTc4ODExOA&ixlib=rb-1.2.1&q=80&utm_campaign=api-credit&utm_medium=referral&utm_source=unsplash_source&w=1080') no-repeat center center/cover;
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    top: -30;
+    left: -30;
+    width: calc(100vw + 60px);
+    height: calc(100vw + 60px);
     z-index: -1;
     filter: blur(0px);
+}
+
+.loading-text {
+    font-size: 60px;
+    color: #fff;
 }
